2012-07-10  Adam Barth  <abarth@webkit.org>

        bugs.webkit.org has mixed content
        https://bugs.webkit.org/show_bug.cgi?id=90907

        Reviewed by Eric Seidel.

        Now that we detect http XMLHttpRequests as mixed content, I've noticed
        that we're loading committers.py over http instead of https.  For
        better security, we should use https.

        * committers-autocomplete.js:

2012-05-30  Ojan Vafai  <ojan@chromium.org>

        Only include the image checksum error in pretty-diffs for -expected.png files.
        https://bugs.webkit.org/show_bug.cgi?id=87881

        Reviewed by Tony Chang.

        * PrettyPatch/PrettyPatch.rb:
        * PrettyPatch/PrettyPatch_test.rb:

2012-05-29  Ojan Vafai  <ojan@chromium.org>

        Show an error in the pretty diff when an image lacks a checksum
        https://bugs.webkit.org/show_bug.cgi?id=87791

        Reviewed by Dirk Pranke.

        * PrettyPatch/PrettyPatch.rb:
        * PrettyPatch/PrettyPatch_test.rb:

2012-04-01  Adam Barth  <abarth@webkit.org>

        Code review tool no longer needs to work around position:fixed handling on iPad
        https://bugs.webkit.org/show_bug.cgi?id=82850

        Reviewed by Eric Seidel.

        We no longer need to avoid position:fixed on iPad because Mobile Safari
        now does something reasonable with position:fixed elements.

        * code-review.js:

2012-03-09  Ashod Nakashian  <ashodnakashian@yahoo.com>

        Bash scripts should support LF endings only
        https://bugs.webkit.org/show_bug.cgi?id=79509

        Reviewed by David Kilzer.

        * contrib/yp_nomail.sh: Added property svn:executable.

2012-03-05  Alexander Færøy  <alexander.faeroy@nokia.com>

        The Bugzilla autocompleter doesn't support multiple Unicode characters per name
        https://bugs.webkit.org/show_bug.cgi?id=80319

        Reviewed by Adam Barth.

        The current regular expression for matching Unicode characters uses