@@ -1,3 +1,13 @@
+2012-07-11  Alice Cheng  <alice_cheng@apple.com>
+
+        Deleting content at the top of prettypatch emails destroys HTML formatting
+        https://bugs.webkit.org/show_bug.cgi?id=90700
+        <rdar://problem/7488232>
+
+        Reviewed by David Kilzer.
+
+        * PrettyPatch/PrettyPatch.rb:
+
 2012-07-10  Adam Barth  <abarth@webkit.org>
 
         bugs.webkit.org has mixed content
